--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tel-misemilla-bot",
   "version": "1.0.0",
   "description": "Bot Mi Semilla con integración Telegram + Supabase (modo webhook + polling).",
-  "main": "index.js",
+  "main": "index.cjs",
   "scripts": {
     "start": "node index.cjs"
   },
@@ -11,7 +11,6 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.44.4",
-    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "node-telegram-bot-api": "^0.66.0"
   }
