--- a/package.json
+++ b/package.json
@@ -1,23 +1,33 @@
 {
   "name": "bot-whatsapp-misemilla",
   "version": "1.0.0",
-  "description": "Bot WhatsApp Mi Semilla con blindaje total, actualización sensible/no sensible y reintento Supabase.",
+  "description": "Bot automatizado de WhatsApp con Supabase y Render (Mi Semilla 🌱)",
   "main": "index.js",
-  "type": "commonjs",
+  "type": "module",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.45.0",
     "@whiskeysockets/baileys": "^6.7.8",
-    "@supabase/supabase-js": "^2.44.4",
-    "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "qrcode": "^1.5.4",
-    "qrcode-terminal": "^0.12.0"
+    "node-fetch": "^3.3.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
   },
   "engines": {
-    "node": ">=22.0.0"
+    "node": ">=18.x"
   },
-  "author": "Total Business",
+  "keywords": [
+    "whatsapp",
+    "supabase",
+    "render",
+    "bot",
+    "baileys",
+    "misemilla"
+  ],
+  "author": "Mi Semilla Team 🌱",
   "license": "MIT"
 }
