--- a/package.json
+++ b/package.json
@@ -1,33 +1,20 @@
 {
   "name": "bot-whatsapp-misemilla",
   "version": "1.0.0",
-  "description": "Bot automatizado de WhatsApp con Supabase y Render (Mi Semilla 🌱)",
+  "description": "Bot WhatsApp conectado a Supabase y Render con keep-alive.",
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "node index.js"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.45.0",
-    "@whiskeysockets/baileys": "^6.7.8",
+    "@whiskeysockets/baileys": "^6.5.0",
+    "@supabase/supabase-js": "^2.39.6",
     "express": "^4.19.2",
     "node-fetch": "^3.3.2"
   },
-  "devDependencies": {
-    "nodemon": "^3.1.0"
-  },
   "engines": {
-    "node": ">=18.x"
+    "node": ">=18.0.0"
   },
-  "keywords": [
-    "whatsapp",
-    "supabase",
-    "render",
-    "bot",
-    "baileys",
-    "misemilla"
-  ],
-  "author": "Mi Semilla Team 🌱",
   "license": "MIT"
 }
