--- a/package.json
+++ b/package.json
@@ -1,20 +1,17 @@
 {
-  "name": "bot-whatsapp-misemilla",
+  "name": "bot-mi-semilla",
   "version": "1.0.0",
-  "description": "Bot WhatsApp conectado a Supabase y Render con keep-alive.",
-  "main": "index.js",
   "type": "module",
+  "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "@whiskeysockets/baileys": "^6.5.0",
-    "@supabase/supabase-js": "^2.39.6",
-    "express": "^4.19.2",
-    "node-fetch": "^3.3.2"
-  },
-  "engines": {
-    "node": ">=18.0.0"
-  },
-  "license": "MIT"
+    "@supabase/supabase-js": "^2.39.3",
+    "@whiskeysockets/baileys": "^6.6.0",
+    "qrcode": "^1.5.3",
+    "qrcode-terminal": "^0.12.0",
+    "express": "^4.18.2",
+    "dotenv": "^16.4.5"
+  }
 }
