--- a/package.json
+++ b/package.json
@@ -1,17 +1,22 @@
 {
-  "name": "bot-mi-semilla",
+  "name": "mi-semilla-bot",
   "version": "1.0.0",
-  "type": "module",
+  "description": "Bot WhatsApp con conexión Supabase y Express",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.39.3",
-    "@whiskeysockets/baileys": "^6.6.0",
-    "qrcode": "^1.5.3",
-    "qrcode-terminal": "^0.12.0",
-    "express": "^4.18.2",
-    "dotenv": "^16.4.5"
+    "@supabase/supabase-js": "^2.45.2",
+    "@whiskeysockets/baileys": "^6.7.9",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "path": "^0.12.7",
+    "qrcode": "^1.5.4",
+    "qrcode-terminal": "^0.12.0"
+  },
+  "engines": {
+    "node": ">=22.x"
   }
 }
